2013-07-17  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/test_state.c:
	  - test_session_serialise(): Added new test "Ensure session
	    deserialisation does not create JobClasses" to assert
	    new session deserialisation behaviour.
	  - test_session_upgrade2(): Finished writing this test - it now creates
	    a fake chroot path, updates the JSON so that all references to the
	    chroot session refer to the temporary chroot path, creates 2 jobs
	    and then performs the serialisation/deserialisation.
	* init/tests/test_util.c:
	  - ensure_env_clean():
	    - Comments.
	    - Added log_unflushed_files.
	  - clean_env(): New function that re-initialises the common
	    data structures.
	* test/test_util_common.c: search_and_replace(): New function.

2013-07-16  Colin Watson  <cjwatson@ubuntu.com>

	* configure.ac: Use json-c rather than json if available.

2013-07-16  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/data/upstart-session2.json: New JSON used by
	  test_session_upgrade2().
	* init/Makefile.am: Added upstart-session.json and upstart-session2.json
	  to TEST_DATA_FILES.
	* init/conf.c: conf_source_deserialise_all(): Assert that no conf
	  sources have yet been deserialised since now session deserialisation
	  avoids creating chroot conf sources (see below).
	* init/job_class.c: job_class_deserialise_all(): Formatting.
	* init/session.c: session_deserialise_all(): Don't create ConfSources
	  for each Session (since they are not actually used).
	* init/tests/test_state.c:
	  - test_upgrade(): Call ensure_env_clean() both before each test and
	    after the last test to ensure it left the environment clean.
	  - test_session_upgrade(): Clear up sessions.
	  - test_session_upgrade2(): New test.
	* init/tests/test_util.c: ensure_env_clean(): New function abstracted
	  from code in test_upgrade().

2013-07-15  James Hunt  <james.hunt@ubuntu.com>

	* init/state.c:
	  - state_deserialise_resolve_deps(): Look up class