@@ -1,0 +1,6 @@
+description "Restart session init when system init restarts"
+author "Stéphane Graber <stgraber@ubuntu.com>"
+
+start on :sys:restarted
+
+exec dbus-send --type=method_call --address=$UPSTART_SESSION /com/ubuntu/Upstart com.ubuntu.Upstart0_6.Restart
