@@ -1,0 +1,15 @@
+# upstart-event-bridge - Bridge system upstarts events into session upstart
+#
+# This helper daemon receives system upstart events from the DBus system bus
+# and emits equivalent events (with a :sys:) prefix to the session bus
+
+description	"Bridge Upstart system events into session Upstart"
+
+emits :sys:*
+
+start on started dbus
+stop on stopped dbus
+
+respawn
+
+exec upstart-event-bridge
