@@ -1,0 +1,16 @@
+# upstart-file-bridge - Bridge file events into upstart
+#
+# This helper daemon receives inotify(7) events and
+# emits equivalent Upstart events.
+
+description	"Bridge file events into upstart"
+
+emits file
+
+start on startup
+stop on session-end
+
+expect daemon
+respawn
+
+exec upstart-file-bridge --daemon --user
